WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187814
REGRESSION(
r233969
): ASSERT in -[WebAVPlayerLayer setVideoGravity:]
https://bugs.webkit.org/show_bug.cgi?id=187814
Summary
REGRESSION(r233969): ASSERT in -[WebAVPlayerLayer setVideoGravity:]
Jer Noble
Reported
2018-07-19 12:27:25 PDT
REGRESSION(
r233969
): ASSERT in -[WebAVPlayerLayer setVideoGravity:]
Attachments
Patch
(3.27 KB, patch)
2018-07-19 12:30 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews205 for win-future
(13.09 MB, application/zip)
2018-07-20 01:24 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2018-07-19 12:30:02 PDT
<
rdar://problem/42391869
>
Jer Noble
Comment 2
2018-07-19 12:30:05 PDT
Created
attachment 345372
[details]
Patch
Sam Weinig
Comment 3
2018-07-19 13:31:11 PDT
Can this be tested?
Jer Noble
Comment 4
2018-07-19 16:16:25 PDT
(In reply to Sam Weinig from
comment #3
)
> Can this be tested?
We see this ASSERT happening in crash reports, but I haven't been able to reproduce the crash in WKTR or DTR. It looks like it may be a timing issue with AVKit that happens occasionally.
EWS Watchlist
Comment 5
2018-07-20 01:24:30 PDT
Comment on
attachment 345372
[details]
Patch
Attachment 345372
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/8596796
New failing tests: http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-video.html
EWS Watchlist
Comment 6
2018-07-20 01:24:41 PDT
Created
attachment 345434
[details]
Archive of layout-test-results from ews205 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews205 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
WebKit Commit Bot
Comment 7
2018-07-20 09:51:14 PDT
Comment on
attachment 345372
[details]
Patch Clearing flags on attachment: 345372 Committed
r234044
: <
https://trac.webkit.org/changeset/234044
>
WebKit Commit Bot
Comment 8
2018-07-20 09:51:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug