Cherry-pick r234044. rdar://problem/42433225

REGRESSION(r233969): ASSERT in -[WebAVPlayerLayer setVideoGravity:]
    https://bugs.webkit.org/show_bug.cgi?id=187814
    <rdar://problem/42391869>

    Reviewed by Eric Carlson.

    After r233969 caused models to disassociate themselves from interfaces, it is now possible that an
    VideoFullscreenInterfaceAVKit can have a nil model. We should null-check, not ASSERT, now that the
    assertion no longer holds true.

    * platform/ios/VideoFullscreenInterfaceAVKit.mm:
    (-[WebAVPlayerLayer layoutSublayers]):
    (-[WebAVPlayerLayer resolveBounds]):
    (-[WebAVPlayerLayer setVideoGravity:]):

    Canonical link: https://commits.webkit.org/203036@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234044 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/202900.97@safari-606-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-606-branch@234299 268f45cc-cd09-0410-ab3c-d52691b4dbfc